# 3D-NAND-Flash-Storage-Optimization-Tool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  lint.yml
docs/: CONTRIBUTING.md  api_reference.md  conf.py  index.md  user_manual.md
docs/design_docs/: firmware_integration.md  nand_characterization.md  nand_defect_handling.md  performance_optimization.md  system_architecture.md
examples/: basic_operations.py  caching.py  compression.py  error_correction.py  examples.md  firmware_generation.py  wear_leveling.py
resources/config/: config.yaml  template.yaml  test_cases.yaml
scripts/: characterization.py  performance_test.py  validate.py
src/: __init__.py  main.py  nand_controller.py
src/firmware_integration/: __init__.py  firmware_specs.py  test_benches.py  validation_scripts.py
src/nand_characterization/: __init__.py  data_analysis.py  data_collection.py  visualization.py
src/nand_defect_handling/: __init__.py  bad_block_management.py  bch.py  error_correction.py  ldpc.py  wear_leveling.py
src/performance_optimization/: __init__.py  caching.py  data_compression.py  parallel_access.py
src/ui/: __init__.py  main_window.py  result_viewer.py  settings_dialog.py
src/utils/: __init__.py  config.py  file_handler.py  logger.py  nand_interface.py  nand_simulator.py
tests/integration/: test_integration.py
tests/unit/: test_firmware_integration.py  test_nand_characterization.py  test_nand_defect_handling.py  test_performance_optimization.py
